--- a/index.html
+++ b/index.html
@@ -7,9 +7,52 @@
 <title>Happy New Year</title>
 </head>
 
+<style>
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+</style>
+	
+	
 <body style = "background-color: #b8001f">
 	<div style="text-align:center;">
-	<button class="Button" style="">Huat will I get?</button>
+		<button class="button" style="vertical-align:middle"><span> Huat will I get? </span></button>
 	<img id ="randomImage" alt="#" style = "max-width: 100%;display:none">
 	</div>
 </body>
@@ -41,8 +84,8 @@
     var size = image.length
     var x = Math.floor(size*Math.random())
 
-	$(".Button").click(function(){
-  		$(".Button").fadeOut(0);
+	$(".button").click(function(){
+  		$(".button").fadeOut(0);
 		document.getElementById("randomImage").src=image[x];
 		$("#randomImage").bind("load", function () { $(this).fadeIn(1500); });	
 	});
