--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <style>
 .button {
-  display: inline-block;
+  display: flex;
+  align-items: center;
   border-radius: 4px;
   background-color: #f4511e;
   border: none;
