--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <style>
 .button {
-  display: flex;
+  display: inline-block;
   align-items: center;
   border-radius: 4px;
   background-color: #f4511e;
